Update inventory stock quantities and improve first-time setup logic in Main class